separate entities and models
(cherry picked from commit 84a8f6d6b47c53064d11be6a65f1abeb31f285ba)
