# mainServer/docs/swagger.json
@@ -20,26 +20,12 @@
                 "summary": "Create new article",
                 "parameters": [
                     {
-                        "example": "Lorem Ipsum",
-                        "description": "Title",
-                        "name": "title",
+                        "description": "Article",
+                        "name": "article",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "example": "janedoe@mail.com,joedoe@mail.com",
-                        "description": "Owner emails",
-                        "name": "owners",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/models.ArticleCreationForm"
                         }
                     }
                 ],
@@ -47,7 +33,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entities.Article"
+                            "$ref": "#/definitions/models.Article"
                         }
                     }
                 }
@@ -125,17 +111,44 @@
         }
     },
     "definitions": {
-        "entities.Article": {
+        "entities.User": {
             "type": "object",
-            "required": [
-                "id",
-                "owners",
-                "title"
-            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "pwd": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Article": {
+            "type": "object",
             "properties": {
                 "id": {
                     "type": "string"
                 },
+                "owners": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.User"
+                    }
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.ArticleCreationForm": {
+            "type": "object",
+            "required": [
+                "owners",
+                "title"
+            ],
+            "properties": {
                 "owners": {
                     "type": "array",
                     "items": {
@@ -147,7 +160,7 @@
                 }
             }
         },
-        "entities.User": {
+        "models.User": {
             "type": "object",
             "required": [
                 "email",
@@ -158,9 +171,6 @@
                     "type": "string"
                 },
                 "name": {
-                    "type": "string"
-                },
-                "pwd": {
                     "type": "string"
                 }
             }
